cleaning up my applications and also adding legit exceptions